traefik/traefik-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.k8s.internal`)
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: secured@file
