traefik/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 10Mi
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  selector:
    app: whoami
  ports:
    - port: 80
      targetPort: web
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-whoami
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`whoami.k8s.internal`)
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: secured@file
